# kinemotion

./: .envrc  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc  .tool-versions  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  babel.cfg  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties  vercel.json
.basic-memory/api/: supabase-authentication-setup-guide.md
.basic-memory/authentication/: auth-provider-comparison-december-2025.md  auth-providers-comparison-december-2025.md  supabase-authentication-quick-start.md  supabase-authentication-setup-guide.md  supabase-authentication-technical-guide.md  supabase-google-oauth-setup-guide.md  supabase-production-setup-guide.md  supabase-quick-start-guide.md
.basic-memory/biomechanics/: cmj-landing-detection-bias-root-cause-analysis.md  cmj-landing-detection-impact-vs-contact-method-comparison.md  cmj-phase-detection-validation-45deg-oblique-view-ground-truth.md  cmj-standing-end-detection-7-frame-bias-analysis.md  drop-jump-pose-detection-investigation-root-cause-analysis.md  landing-detection-research-foot-velocity-approach.md  landing-method-impact-on-calculated-metrics-14-jump-height-difference.md  sprinting-analysis-design-validation-critical-review.md  sprinting-analysis-validation-executive-summary.md  squat-jump-implementation-plan.md  squat-jump-power-and-force-calculation-formulas.md  squat-jump-validation-bounds-complete-analysis.md
.basic-memory/codebase/: validation-architecture-visual-hierarchy-after-refactoring.md  validation-code-duplication-evidence.md  validation-module-architecture-analysis.md  validation-refactoring-complete-architecture-improvement.md
.basic-memory/deployment/: automated-deployment-setup-git-hub-actions-with-workload-identity-federation.md  cloud-run-security-least-privilege-service-account-setup.md  cors-and-memory-issues-production-debugging-guide.md  vercel-monorepo-deployment-best-practice.md
.basic-memory/development/: backend-code-coverage-analysis.md  backend-code-duplication-analysis.md  backend-sonar-cloud-integration-status.md  cmj-algorithm-design-binary-threshold-analysis-no-issues-found.md  drop-jump-position-based-filtering-fix.md  frontend-dependencies-analysis-nov-2025.md  google-oauth-setup-script-final-review-production-ready.md  google-oauth-setup-script-review-issues-and-recommendations.md  keyboard-interrupt-test-suite-failure-analysis.md  multi-backend-pose-tracking-architecture.md  normative-data-research-audit-feb-2026.md  optimized-cputracker-success-fully-functional.md  p0-p1-p2-test-suite-fixes-final-report.md  (+12 more)
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.cursor/: mcp.json
.gemini/: settings.json
.serena/: project.yml
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  fly.toml  pyproject.toml  supabase-schema.sql
benchmarks/: README.md  __init__.py  test_drop_jump.py  test_filtering.py
docs/: CAMERA_SETUP.md  CAMERA_SETUP_ES.md  FRAMERATE.md  IMPLEMENTATION_PLAN.md  IMU_METADATA_PRESERVATION.md  PARAMETERS.md  README.md  VALIDATION_PLAN.md  quick-start.md  validation-status.md
examples/: programmatic_usage.py
frontend/: .env.example  .gitignore  .pnp.cjs  .yarnrc.yml  README.md  package.json  playwright.config.ts  vercel.json  vite.config.ts
presentation/: README.md  presentation_guide.md  speaker_script.md
scripts/: README.md  analyze_takeoff_all.py  analyze_takeoff_video2.py  compare_full_accuracy.py  debug_contact_states.py  extract_landing_frames.py  extract_single_frame.py  optimize_phase_detection.py  plot_cmj_velocities.py  plot_velocities.py  setup-github-deploy.sh  test_acceleration_standing.py  test_drop_start_debug.py  test_landing_method_integration.py  update_translations.sh  validate_ankle_angle.py  validate_foot_velocity_landing.py  verify_improvements.py
search/: search_index.json
tests/: conftest.py  test_adaptive_threshold.py  test_api.py  test_aspect_ratio.py  test_cli_cmj.py  test_cli_dropjump.py  test_cmj_analysis.py  test_cmj_joint_angles.py  test_cmj_kinematics.py  test_com_estimation.py  test_contact_detection.py  test_dropjump_validation_integration.py  test_filtering.py  test_joint_angles.py  test_kinematics.py  test_polyorder.py  test_video_io.py
(+535 files in other folders)
